--- a/app/scss/_index.scss
+++ b/app/scss/_index.scss
@@ -37,6 +37,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     margin: 0;
     width: 100%;
     height: 100vh;
+    background-color: transparent;
   }
   * {
     -webkit-overflow-scrolling: touch;
